[package]
name = "cs224n_final_project"
version = "0.1.0"
edition = "2018"

[dependencies]
csv = "1.1"
scraper = "0.12"
serde = "1.0"
serde_derive = "1.0"
indicatif = "0.17"
reqwest = { version = "0.11", features = ["blocking"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
rayon = "1.5.1"